2008-04-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Query/BansheeQuery.cs:
	* src/Core/Banshee.Services/Banshee.SmartPlaylist/SmartPlaylistSource.cs:
	* src/Libraries/Hyena/Hyena.Query/QueryOrder.cs: Implement smart
	playlists limited by file size and duration.  Fixes BGO #522889.

2008-04-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs:
	Fix bug with incrementing skip count instead of play count when a song
	ended and the next one began (behavior was correct if the song hadn't
	ended and the user manually pressed next.)  Fixes BGO #527879.

2008-04-28  Gabriel Burt  <gabriel.burt@gmail.com>

	WARNING: This commit is a first pass at reworking some of the Podcast/Migo
	internals to use Hyena and be more consistent with Banshee's style.  It
	severely breaks the podcast extension for the time being, so unless you
	are working with Mike and me to fix it, you should not build or run it.

	* build/build.environment.mk: Link Migo against Hyena.

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseAlbumInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseArtistInfo.cs:
	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Update to new Load method (w/o superflous int arg).

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	Fix DatabaseColumn attributes to be on properties, not private members.

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackListModel.cs:
	Use new IDatabaseTrackModel[Provider|Cache] interfaces to allow this class
	to handle DatabaseTrackInfo subclasses (eg to handle PodcastInfo objects).

	* src/Core/Banshee.Services/Banshee.Playlist/AbstractPlaylistSource.cs:
	Override AfterInitialized method, moving quite a bit of track model
	property setting there.

	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: